<resources>
    <string name="app_name">HousEat</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="correo_electronico">Correo eléctronico</string>
    <string name="contrasennia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="olvida_contra">¿Olvidaste tu contraseña?</string>
    <string name="activity_registrarse">Registrarse</string>
    <string name="registrate">Registrate</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido(s)</string>
    <string name="tel">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="confirmar_contra">Confirmar contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="activity_recuperarContra">Recuperar contraseña</string>
    <string name="correo_asociado">Correo asociado a su cuenta</string>
    <string name="btn_recuperar">Recuperar contraseña</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="pedidos">Pedidos</string>
    <string name="perfil">Perfil</string>
    <string name="cancelar">Cancelar</string>
    <string name="mc_donalds">Mc Donalds</string>
    <string name="descripci_n_restaurnte">Descripción restaurnte</string>
    <string name="domino_s">Domino\'s</string>
    <string name="starbucks">Starbucks</string>
    <string name="krispy_kreme">Krispy Kreme</string>
    <string name="info_user">Nombre completo del usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_atras">btn_atras</string>
    <string name="cuarto_libra">Cuarto de libra con queso</string>
    <string name="cantidad">Cantidad</string>
    <string name="opciones">Opciones</string>
    <string name="notas_especiales">Notas especiales</string>
    <string name="ordenar">Ordenar</string>
    <string name="orden_exitosa">Orden exitosa</string>
    <string name="aceptar">Aceptar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="mapa">Mapa</string>
    <string-array name="cantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>