<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/inicio"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/inicio"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/buscar"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/buscar"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/pedidos"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/pedidos"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/perfil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/perfil"
        app:showAsAction="ifRoom"/>

</menu>