<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perfil"
            android:textSize="36sp"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold"
            android:paddingTop="30dp"
            android:paddingStart="45dp"
            android:paddingEnd="10dp"   />

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:contentDescription="@string/perfil"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/icono_usuario" />

        <TextView
            android:id="@+id/nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_user"
            android:textSize="30sp"
            android:textColor="@color/secondaryTextColor"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:textAlignment="center"  />

        <TextView
            android:id="@+id/telefono_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textSize="25sp"
            android:textColor="@color/secondaryTextColor"
            android:paddingTop="15dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/correo_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo_electronico"
            android:textSize="25sp"
            android:textColor="@color/secondaryTextColor"
            android:paddingTop="15dp"
            android:textAlignment="center"  />

        <TextView
            android:id="@+id/direccion_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textSize="25sp"
            android:textColor="@color/secondaryTextColor"
            android:paddingTop="15dp"
            android:textAlignment="center"  />

    </LinearLayout>

</FrameLayout>