<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    <TextView
        android:id="@+id/txtBienvenido"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginTop="96dp"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCorreo_lay"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:layout_marginTop="100dp"
        android:hint="@string/correo_electronico"
        android:textColorHint="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBienvenido"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCorreo"
            android:layout_width="335dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/transparent"
            android:autofillHints="emailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword_lay"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:hint="@string/contrasennia"
        android:textColorHint="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="335dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/transparent"
            android:autofillHints="password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/iniciar_sesion"
        android:textSize="16sp"
        android:textColor="@color/secondaryTextColor"
        android:backgroundTint="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword_lay" />

    <Button
        android:id="@+id/btn_olvido_contra"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="38dp"
        android:text="@string/olvida_contra"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:gravity="end"
        android:onClick="olvidoContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_iniciar_sesion"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:id="@+id/btn_registrate"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/registrate"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:gravity="center"
        android:onClick="registrarUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_olvido_contra"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>