<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ordenar">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:elevation="4dp"
        app:title="@string/ordenar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/cuarto_libra"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:srcCompat="@drawable/cuarto_libra" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtCantidad_lay"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:layout_marginTop="55dp"
        android:hint="@string/cantidad"
        android:textColorHint="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/cantidad"
            android:layout_width="335dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="none"
            android:textSize="18sp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/transparent"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNotas_lay"
        android:layout_width="335dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:hint="@string/notas_especiales"
        android:textColorHint="@color/secondaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCantidad_lay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCorreo"
            android:layout_width="335dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="18sp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/transparent"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_ordenar"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/ordenar"
        android:backgroundTint="@color/secondaryColor"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
        android:onClick="Orden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNotas_lay" />


</androidx.constraintlayout.widget.ConstraintLayout>