<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PedidosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedidos"
            android:textSize="36sp"
            android:textColor="@color/secondaryTextColor"
            android:paddingTop="45dp"
            android:paddingStart="45dp"
            android:paddingEnd="10dp"
            android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mc_donalds_card"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                style="@style/Widget.Material3.CardView.Outlined">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="2dp"
                        android:scaleType="fitStart"
                        android:contentDescription="@string/mc_donalds"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/mc_donalds_logo"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/titulo_macdonals"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:gravity="center"
                            android:text="@string/mc_donalds"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/descrion_macdonalds"
                            android:layout_width="match_parent"
                            android:layout_height="65dp"
                            android:gravity="center"
                            android:text="@string/descripci_n_restaurnte"
                            android:textSize="22sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</FrameLayout>